--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="profile-card">
         <div class="profile-image">
-            <img src="/image/profile.jpg" alt="Moiniruzzaman" class="image">
+            <img src="image/profile.jpg" alt="Moiniruzzaman" class="image">
         </div>
         <div class="text-area">
             <span class="name">Muhammad Moniruzzaman</span>
